Fixed text-align and div for recipes

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,3 +47,7 @@ ul {
 ul li {
   padding: 10px;
 }
+
+ol {
+  text-align: left;
+}
